modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -492,7 +492,7 @@
     "        if( root == null )\n",
     "        {\n",
     "\n",
-    "            // Throw an exception prividing guidance implicating an empty BST\n",
+    "            // Throw an exception providing guidance implicating an empty BST\n",
     "            throw new NullReferenceException(\n",
     "                @\"\n",
     "                The BST is empty, so it doesn't have a max value.\n",
@@ -521,6 +521,126 @@
     "        // the current node contains the minimum node value in the BST,\n",
     "        // as required\n",
     "        return currentNode.value;\n",
+    "\n",
+    "    }\n",
+    "    /////////////////////////////////////////////////////////////////////////////////////\n",
+    "    // Returns the height, or number of levels, present in the BST\n",
+    "    private int GetHeight( BinarySearchTreeNode<T> nodeToFindHeightFor )\n",
+    "    {\n",
+    "       \n",
+    "        // If the BST is empty or invallid: \n",
+    "        if( root == null )\n",
+    "        {\n",
+    "\n",
+    "            // Throw an exception providing guidance implicating an empty BST\n",
+    "            throw new NullReferenceException(\n",
+    "                @\"\n",
+    "                The BST is empty, so it doesn't have a height.\n",
+    "                \"\n",
+    "            );\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // Instatiate a counter to calculate the current height of the left subtree\n",
+    "        // and recur in the left subtree to proceed with the calculation\n",
+    "        int currentHeightToTheLeft = GetHeight( nodeToFindHeightFor.leftChild );\n",
+    "\n",
+    "\n",
+    "        // Instatiate a counter to calculate the current height of the right subtree\n",
+    "        // and recur in the right subtree to proceed with the calculation\n",
+    "        int currentHeightToTheRight = GetHeight( nodeToFindHeightFor.rightChild );\n",
+    "\n",
+    "\n",
+    "\n",
+    "        // If the current height of the left subtree exceeds that of the right subtree\n",
+    "        if( currentHeightToTheLeft > currentHeightToTheRight )\n",
+    "        {\n",
+    "\n",
+    "            // So we increment left subtree counter by one\n",
+    "            // in advance of the next recursion\n",
+    "            return currentHeightToTheLeft + 1;\n",
+    "\n",
+    "        }\n",
+    "        \n",
+    "        // Otherwise,\n",
+    "        // the current height of the right subtree exceeds that of the left subtree\n",
+    "        else\n",
+    "        {\n",
+    "\n",
+    "            // So we increment left subtree counter by one\n",
+    "            // in advance of the next recursion\n",
+    "            return currentHeightToTheRight + 1;\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "        // After all that,\n",
+    "        // the final counter value will reflect the total height of the BST,\n",
+    "        // as required\n",
+    "\n",
+    "    }\n",
+    "    /////////////////////////////////////////////////////////////////////////////////////\n",
+    "    // Calculates the number of levels present in the BST\n",
+    "    public int CountLevels( BinarySearchTreeNode<T> nodeToFindHeightFor )\n",
+    "    {\n",
+    "       \n",
+    "        // Instatiate a counter to calculate the current height of the left subtree\n",
+    "        // and recur in the left subtree to proceed with the calculation\n",
+    "        int currentHeightToTheLeft = CountLevels( nodeToFindHeightFor.leftChild );\n",
+    "\n",
+    "\n",
+    "        // Instatiate a counter to calculate the current height of the right subtree\n",
+    "        // and recur in the right subtree to proceed with the calculation\n",
+    "        int currentHeightToTheRight = CountLevels( nodeToFindHeightFor.rightChild );\n",
+    "\n",
+    "\n",
+    "\n",
+    "        // If the current height of the left subtree exceeds that of the right subtree\n",
+    "        if( currentHeightToTheLeft > currentHeightToTheRight )\n",
+    "        {\n",
+    "\n",
+    "            // So we increment left subtree counter by one\n",
+    "            // in advance of the next recursion\n",
+    "            return currentHeightToTheLeft + 1;\n",
+    "\n",
+    "        }\n",
+    "        \n",
+    "        // Otherwise,\n",
+    "        // the current height of the right subtree exceeds that of the left subtree\n",
+    "        else\n",
+    "        {\n",
+    "\n",
+    "            // So we increment left subtree counter by one\n",
+    "            // in advance of the next recursion\n",
+    "            return currentHeightToTheRight + 1;\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "        // After all that,\n",
+    "        // the final counter value will reflect the total height of the BST,\n",
+    "        // as required\n",
+    "\n",
+    "    }\n",
+    "    /////////////////////////////////////////////////////////////////////////////////////\n",
+    "    // Returns the height of the the BST by calculating the number of its levels.\n",
+    "    public int Height( BinarySearchTreeNode<T> nodeToFindHeightFor )\n",
+    "    {\n",
+    "       \n",
+    "        // If the BST is empty or invalid: \n",
+    "        if( root == null )\n",
+    "        {\n",
+    "\n",
+    "            // Throw an exception providing guidance implicating an empty BST\n",
+    "            throw new NullReferenceException(\n",
+    "                @\"\n",
+    "                The BST is empty, so it doesn't have a height.\n",
+    "                \"\n",
+    "            );\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "        // Calculate the number of levels present in the BST\n",
+    "        return CountLevels( root );\n",
     "\n",
     "    }\n",
     "    //-----------------------------------------------------------------------------------\n",
@@ -1361,6 +1481,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(1,12): error CS7036: There is no argument given that corresponds to the required parameter 'nodeToFindHeightFor' of 'BinarySearchTree<int>.Height(BinarySearchTree<int>.BinarySearchTreeNode<int>)'",
+     "output_type": "error",
+     "traceback": [
+      "(1,12): error CS7036: There is no argument given that corresponds to the required parameter 'nodeToFindHeightFor' of 'BinarySearchTree<int>.Height(BinarySearchTree<int>.BinarySearchTreeNode<int>)'"
+     ]
+    }
+   ],
+   "source": [
+    "exampleBST.Height()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -1370,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1389,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1422,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1458,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1518,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
