modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -580,67 +580,41 @@
     "\n",
     "    }\n",
     "    /////////////////////////////////////////////////////////////////////////////////////\n",
-    "    // Calculates the number of levels present in the BST\n",
-    "    public int CountLevels( BinarySearchTreeNode<T> nodeToFindHeightFor )\n",
+    "    // Calculates the total height in the BST by counting each of it's levels\n",
+    "    public int CalculateHeight( BinarySearchTreeNode<T> nodeToFindHeightFor )\n",
     "    {\n",
-    "       \n",
-    "        // Instatiate a counter to calculate the current height of the left subtree\n",
-    "        // and recur in the left subtree to proceed with the calculation\n",
-    "        int currentHeightToTheLeft = CountLevels( nodeToFindHeightFor.leftChild );\n",
-    "\n",
-    "\n",
-    "        // Instatiate a counter to calculate the current height of the right subtree\n",
-    "        // and recur in the right subtree to proceed with the calculation\n",
-    "        int currentHeightToTheRight = CountLevels( nodeToFindHeightFor.rightChild );\n",
-    "\n",
-    "\n",
-    "\n",
-    "        // If the current height of the left subtree exceeds that of the right subtree\n",
-    "        if( currentHeightToTheLeft > currentHeightToTheRight )\n",
-    "        {\n",
-    "\n",
-    "            // So we increment left subtree counter by one\n",
-    "            // in advance of the next recursion\n",
-    "            return currentHeightToTheLeft + 1;\n",
-    "\n",
-    "        }\n",
     "        \n",
-    "        // Otherwise,\n",
-    "        // the current height of the right subtree exceeds that of the left subtree\n",
-    "        else\n",
+    "        // If the node to find the height for is null:\n",
+    "        if( nodeToFindHeightFor == null )\n",
     "        {\n",
     "\n",
-    "            // So we increment left subtree counter by one\n",
-    "            // in advance of the next recursion\n",
-    "            return currentHeightToTheRight + 1;\n",
+    "            // Indicate that the height is 0\n",
+    "            return 0;\n",
     "\n",
     "        }\n",
     "\n",
-    "        // After all that,\n",
-    "        // the final counter value will reflect the total height of the BST,\n",
-    "        // as required\n",
+    "\n",
+    "        // Determinine the maximum height currently observed \n",
+    "        // between the the BST's left and right subtrees\n",
+    "        // and increment that value by 1 \n",
+    "        return 1 + int.Max( \n",
+    "\n",
+    "            // Recursively calculate the height of the left subtree\n",
+    "            CalculateHeight( nodeToFindHeightFor.leftChild ),\n",
+    "\n",
+    "            // Recursively calculate the height of the right subtree  \n",
+    "            CalculateHeight( nodeToFindHeightFor.rightChild )\n",
+    "\n",
+    "        );\n",
     "\n",
     "    }\n",
     "    /////////////////////////////////////////////////////////////////////////////////////\n",
-    "    // Returns the height of the the BST by calculating the number of its levels.\n",
-    "    public int Height( BinarySearchTreeNode<T> nodeToFindHeightFor )\n",
+    "    // Returns the height of the the BST, starting with it's root.\n",
+    "    public int Height()\n",
     "    {\n",
     "       \n",
-    "        // If the BST is empty or invalid: \n",
-    "        if( root == null )\n",
-    "        {\n",
-    "\n",
-    "            // Throw an exception providing guidance implicating an empty BST\n",
-    "            throw new NullReferenceException(\n",
-    "                @\"\n",
-    "                The BST is empty, so it doesn't have a height.\n",
-    "                \"\n",
-    "            );\n",
-    "\n",
-    "        }\n",
-    "\n",
-    "        // Calculate the number of levels present in the BST\n",
-    "        return CountLevels( root );\n",
+    "        //Calculates the total height in the BST by counting each of it's levels\n",
+    "        return CalculateHeight( root );\n",
     "\n",
     "    }\n",
     "    //-----------------------------------------------------------------------------------\n",
@@ -1320,7 +1294,7 @@
    },
    "outputs": [],
    "source": [
-    "foreach( int nodeValue in new int[] {19 , 11, 35, 7 ,16, 23, 13, 17} )\n",
+    "foreach( int nodeValue in new int[] {19 , 11, 35, 7 ,16, 23, 13, 17, 18, 19, 20, 21, 22} )\n",
     "{\n",
     "    exampleBST.Insert( nodeValue );\n",
     "}"
@@ -1347,7 +1321,11 @@
      "text": [
       "    .——— 35\n",
       "   |    `——— 23\n",
+      "   |       |        .——— 22\n",
+      "   |       |    .——— 21\n",
+      "   |        `——— 20\n",
       "——— 19\n",
+      "   |            .——— 18\n",
       "   |        .——— 17\n",
       "   |    .——— 16\n",
       "   |   |    `——— 13\n",
@@ -1496,12 +1474,44 @@
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "(1,12): error CS7036: There is no argument given that corresponds to the required parameter 'nodeToFindHeightFor' of 'BinarySearchTree<int>.Height(BinarySearchTree<int>.BinarySearchTreeNode<int>)'",
-     "output_type": "error",
-     "traceback": [
-      "(1,12): error CS7036: There is no argument given that corresponds to the required parameter 'nodeToFindHeightFor' of 'BinarySearchTree<int>.Height(BinarySearchTree<int>.BinarySearchTreeNode<int>)'"
-     ]
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>6</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1556,7 +1566,11 @@
      "text": [
       "    .——— 35\n",
       "   |    `——— 23\n",
+      "   |       |        .——— 22\n",
+      "   |       |    .——— 21\n",
+      "   |        `——— 20\n",
       "——— 19\n",
+      "   |        .——— 18\n",
       "   |    .——— 17\n",
       "   |   |    `——— 13\n",
       "    `——— 11\n",
@@ -1588,7 +1602,7 @@
      "output_type": "stream",
      "text": [
       "inorder traversal:\n",
-      "7 11 13 17 19 23 35 "
+      "7 11 13 17 18 19 20 21 22 23 35 "
      ]
     }
    ],
